# yxorp-game

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
attackcli/: Dockerfile  README.md  attack  pyproject.toml
attackcli/attackcli/: cli.py
attackcli/wordlists/: api-common  obj-lowercase
config/: pg_hba.conf
fluentbit/: fluent-bit.conf  parsers.conf
haproxy/: haproxy.cfg
http_strike_kit/: README.md  cli.py  pyproject.toml
http_strike_kit/attacks/: __init__.py  brute_force.py  slowloris.py  (+1 more)
kibana/: import_data_views  kibana-data-views.ndjson  kibana.yml
nginx/: default.conf  nginx.conf
proxyserver/: Dockerfile  README.md  pyproject.toml
proxyserver/proxyserver/: app.py  settings.py
proxyserver/proxyserver/adapters/: redis.py
proxyserver/proxyserver/middlewares/: rate_limit.py  reverse_proxy.py  slowloris.py  syn_flood.py
webserver/: .dockerignore  Dockerfile  README.md  app.py  logger_setup.py  pyproject.toml  settings.py
webserver/adapters/: elastic.py  postgresql.py
webserver/controllers/: ips.py
webserver/models/: ip_address.py
webserver/routers/: countries.py  ips.py
webserver/schemas/: ip_address.py
webserver/webserver/: app.py  logger_setup.py  settings.py
webserver/webserver/adapters/: geoip.py  postgresql.py
webserver/webserver/controllers/: ips.py  user.py
webserver/webserver/models/: user.py
webserver/webserver/routers/: __init__.py  auth.py  countries.py  ips.py  user.py
webserver/webserver/schemas/: ip_address.py  user.py
webserver/webserver/utils/: jwt_token.py  logger_setup.py
(+7 files in other folders)
