[project]
name = "proxyserver"
version = "0.1.0"
description = "protect webserver from evil attackers!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "redis>=6.2.0",
    "uvicorn>=0.34.2",
]
